--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,12 @@
 # IntelliJ project files
 .idea
 
-/assets/js/
 /.htaccess
 /index.php
 /assets/fonts/
-/assets/css/
 /assets/img/
 /assets/html/
 /config.core.php
 /robots.txt
 /favicon.png
+!/assets/
